<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_sensors"
        android:icon="@drawable/ic_nav_sensors"
        android:title="@string/nav_sensors" />

    <item
        android:id="@+id/nav_ble"
        android:icon="@drawable/ic_nav_ble"
        android:title="@string/nav_ble" />

    <item
        android:id="@+id/nav_night_guard"
        android:icon="@drawable/ic_nav_night_guard"
        android:title="@string/nav_night_guard" />

    <item
        android:id="@+id/nav_log"
        android:icon="@drawable/ic_nav_log"
        android:title="@string/nav_log" />

</menu>
